--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -1,19 +1,22 @@
 {
-    "baseUrls": {
-        "apiBase": "https://az204aspapinorth2025dev.azurewebsites.net/api/"
-    },
+  "baseUrls": {
+    "apiBase": "https://az204aspapinorth2025dev.azurewebsites.net/api/"
+  },
     "ConnectionStrings": {
-      "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
-      "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
+        "CatalogConnection": "",
+        "IdentityConnection": ""
     },
-    "CatalogBaseUrl": "",
-    "Logging": {
-        "IncludeScopes": false,
-        "LogLevel": {
-            "Default": "Warning",
-            "Microsoft": "Warning",
-            "System": "Warning"
-        },
-        "AllowedHosts": "*"
-    }
+  "CatalogBaseUrl": "",
+  "Logging": {
+    "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Warning",
+      "Microsoft": "Warning",
+      "System": "Warning"
+    },
+    "AllowedHosts": "*"
+  },
+  "ApplicationInsights": {
+    "ConnectionString": ""
+  }
 }
